@@ -1,5 +1,5 @@
 
- OpenSSL 0.9.8m-dev
+ OpenSSL 0.9.8m
 
  Copyright (c) 1998-2009 The OpenSSL Project
  Copyright (c) 1995-1998 Eric A. Young, Tim J. Hudson
